--- a/hs-blog.cabal
+++ b/hs-blog.cabal
@@ -24,12 +24,12 @@ maintainer:         22795996+ANOLASC@users.noreply.github.com
 extra-source-files: CHANGELOG.md
 
 common common-settings
-    ghc-options:        -Wall -O
+    ghc-options:        -Wall
 
 library
     import:             common-settings
     hs-source-dirs:     src
-    build-depends:      base ^>=4.16.3.0, directory
+    build-depends:      base ^>=4.16.3.0    
     exposed-modules:
         HsBlog
             HsBlog.Convert
@@ -37,14 +37,14 @@ library
                 HsBlog.Html.Internal
             HsBlog.Markup         
 
-executable learn-haskell
+executable hs-blog
     main-is:          Main.hs
     import:           common-settings
     -- Modules included in this executable, other than Main.
-    -- other-modules:    Html, Html.Internal, Markup, Convert
+    other-modules:    OptParse
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
-    build-depends:    base ^>=4.16.3.0, hs-blog
+    build-depends:    base ^>=4.16.3.0, hs-blog, optparse-applicative, directory
     hs-source-dirs:   app
     default-language: Haskell2010
